1. Fixed zooming in issues: By setting the bottom padding of the middle part to a value larger than the width and max width of the footer. Also the top padding of the middle is set to enough spacing value from the nav-bar.
2. Fixed resizing issues:
By setting the min-width of the nav-bar, the middle, and the footer to
an equal large enough value. Also, the container div of the search buttons
to a min-width of half of the value used for the nav-bar, the middle, and
the footer.

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,29 +1,10 @@
-#footer {
-	/* copied values from google. */
-	bottom: 0;
-	left: 0;
-	position: absolute;
-	right: 0;
-
-	/* copied values from google. */
-	background: #f2f2f2;
-	border-top: 1px solid #e4e4e4;
-	line-height: 40px;
-	min-width: 980px;
-
-	/* copied values from google. */
-	font-size: 10pt;
-	color: #222;
-	font-family: arial,sans-serif;
-}
-
-#footer ul {
+#div-footer ul {
 	/* copied from a googled solution. */
 	list-style-type: none;
 	padding: 0;
 }
 
-#footer ul li {
+#div-footer ul li {
 	/* copied from a googled solution. */
 	display: inline;
 }
@@ -40,7 +21,7 @@
 	margin-left: 30px;
 }
 
-#footer ul li a {
+#div-footer ul li a {
 	/* copied values from google. */
 	display: inline-block;
 	color: #666;
@@ -63,8 +44,8 @@
 	vertical-align: middle;
 }
 
-#footer ul li a:hover,
-#footer ul li a:focus {	
+#div-footer ul li a:hover,
+#div-footer ul li a:focus {
 	/* guessed values */
 	text-decoration: underline;
 }
