--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
 html, body {
-	height: 100%;
-	margin: 0;
+	margin:0;
+	padding:0;
+	height:100%;
 }
 
 body {
@@ -10,4 +11,50 @@ body {
 
 div {
 	display: block;
+}
+
+#div-container {
+	min-height: 100%;
+	position: relative;
+}
+
+#div-nav-bar {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	width: 100%;
+	/* to prevent distortion on resizing*/
+	min-width: 980px;
+}
+
+#div-middle {
+	/* Prevents overlapping with the nav-bar*/
+	padding-top: 150px;
+	/* The bottom badding is larger than
+	 * the height and max-height of footer*/
+	padding-bottom: 100px;
+
+	width: 100%;
+	/* to prevent distortion on resizing*/
+	min-width: 980px;
+}
+
+#div-footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+
+	width: 100%;
+	/* to prevent distortion on resizing*/
+	min-width: 980px;
+
+	height: 50px;
+	max-height: 60px;
+
+	background: #f2f2f2;
+	border-top: 1px solid #e4e4e4;
+
+	font-size: 10pt;
+	color: #222;
+	font-family: arial,sans-serif;
+	line-height: 40px;
 }
