--- a/css/middle.css
+++ b/css/middle.css
@@ -1,10 +1,3 @@
-#div-middle {
-	width: 100%;
-	position: absolute;
-	top: 200px;
-	width: 100%;
-}
-
 .horizontally-centered {
 	display: block;
 	margin-left: auto;
@@ -78,6 +71,8 @@
 
 #div-search-buttons {
 	display: inline-block;
+	/* to prevent distortion on resizing*/
+	min-width: 540px;
 }
 
 #div-search-buttons .button {
